--- a/ts.html
+++ b/ts.html
@@ -38,15 +38,10 @@
         </div>
 
         <div class="sidebar">
-            <div id="main-navigation">
-                <div>
-                    <button><a>button1</a></button>
-                    <button><a>button2</a></button>
-                    <button><a>button3</a></button>
-                    
-                    <button><a>button4</a></Button>
-                </div>
-            </div>
+            <button>Button 1</button>
+            <button>Button 2</button>
+            <button>Button 3</button>
+            <button>Button 4</Button>
         </div>
     </div>
 
